fix(#53): add missing styles to align autolinked headers

--- a/src/components/layout/global-styles.css
+++ b/src/components/layout/global-styles.css
@@ -41,7 +41,22 @@ a:hover, a:focus {
 .header-anchor,
 .header-anchor:focus,
 .header-anchor:hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(-100%);
+  padding-right: 4px;
+
   border-bottom: unset;
+}
+
+.header-anchor {
+  opacity: 0;
+}
+
+.header-anchor:focus,
+.header-anchor:hover {
+  opacity: unset;
 }
 
 strong {
